fix: Issue with z-index

--- a/sass/loader.scss
+++ b/sass/loader.scss
@@ -5,12 +5,12 @@
 	z-index: 1000;
 	height: 100vh;
 	width: 100%;
-	background: white;
+	background: $darkblue;
 	text-align: center;
-	padding-top: 20%;
-	font-size: 50px;
+	padding-top: 10%;
+	font-size: 70px;
 	font-family: $font;
-	color: $darkblue;
+	color: white;
 	position: absolute;
 	animation: fade .3s ease-in-out forwards;
 	animation-delay: 4s;
@@ -18,8 +18,16 @@
 
 .hourglass {
 	font-size: 100px;
-	color: $paleblue;
+	color: white;
 	animation: rotation 3s infinite ease-in-out;
+}
+
+.circle {
+	background-color: $paleblue;
+	border-radius: 100%;
+	width: 20%;
+	margin-left: 30%;
+	padding: 10%;
 }
 @keyframes rotation {
 	0% {
@@ -40,5 +48,6 @@
 	}
 	100% {
 		opacity: 0;
+		z-index: -1;
 	}
 }
